--- a/Project Cinema: Upcoming/Base.lproj/MainInterface.storyboard
+++ b/Project Cinema: Upcoming/Base.lproj/MainInterface.storyboard
@@ -21,7 +21,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="88"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="88" id="jnd-Bi-mm6"/>
+                                    <constraint firstAttribute="height" priority="999" constant="88" id="jnd-Bi-mm6"/>
                                 </constraints>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="upcommingMoive" textLabel="tXA-WQ-SED" detailTextLabel="m3E-eq-kao" style="IBUITableViewCellStyleSubtitle" id="MzQ-ka-a6V">
@@ -57,6 +57,7 @@
                         </subviews>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="lcV-DS-Bmd" secondAttribute="trailing" id="C75-l3-Bh5"/>
+                            <constraint firstAttribute="height" secondItem="lcV-DS-Bmd" secondAttribute="height" id="esr-PG-3GN"/>
                             <constraint firstItem="lcV-DS-Bmd" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leading" id="g1O-ur-6oH"/>
                             <constraint firstItem="lcV-DS-Bmd" firstAttribute="top" secondItem="Ft6-oW-KC0" secondAttribute="bottom" id="rqV-oo-KNo"/>
                         </constraints>
