--- a/Project Cinema: Upcoming/Base.lproj/MainInterface.storyboard
+++ b/Project Cinema: Upcoming/Base.lproj/MainInterface.storyboard
@@ -21,7 +21,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="88"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" priority="999" constant="88" id="jnd-Bi-mm6"/>
+                                    <constraint firstAttribute="height" priority="999" id="jnd-Bi-mm6"/>
                                 </constraints>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="upcommingMoive" textLabel="tXA-WQ-SED" detailTextLabel="m3E-eq-kao" style="IBUITableViewCellStyleSubtitle" id="MzQ-ka-a6V">
