--- a/Project Cinema/Base.lproj/Main.storyboard
+++ b/Project Cinema/Base.lproj/Main.storyboard
@@ -265,6 +265,34 @@
             </objects>
             <point key="canvasLocation" x="0.0" y="1445"/>
         </scene>
+        <!--Table View Controller-->
+        <scene sceneID="Y6f-jN-6xD">
+            <objects>
+                <tableViewController id="JWt-1O-Tjc" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="BgA-mA-6qw">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="1200"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="6RE-tW-nKB">
+                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6RE-tW-nKB" id="gmf-Li-DB4">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="JWt-1O-Tjc" id="Dhf-HJ-huP"/>
+                            <outlet property="delegate" destination="JWt-1O-Tjc" id="qpJ-0r-Ws1"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HaV-nz-Ddu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="0.0" y="3863"/>
+        </scene>
         <!--Title-->
         <scene sceneID="fft-5l-s1s">
             <objects>
@@ -439,7 +467,7 @@
                                     <outlet property="movieTitleLabel" destination="eXR-66-reF" id="Byw-my-JcX"/>
                                 </connections>
                             </tableViewCell>
-                            <tableViewCell clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="movieRatingCell" id="b2b-vp-hfI" customClass="PCMainDetailsRatingTableViewCell" customModule="Project_Cinema" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="movieRatingCell" id="b2b-vp-hfI" customClass="PCMainDetailsRatingTableViewCell" customModule="Project_Cinema" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="491" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="b2b-vp-hfI" id="WOO-yu-c9R">
@@ -494,7 +522,22 @@
                                                 </view>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gma-x7-f81">
                                                     <rect key="frame" x="301" y="0.0" width="299" height="43"/>
+                                                    <subviews>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sdj-j1-zKz">
+                                                            <rect key="frame" x="0.0" y="0.0" width="299" height="43"/>
+                                                            <state key="normal" title="Rate This"/>
+                                                            <connections>
+                                                                <segue destination="JWt-1O-Tjc" kind="show" id="6sc-kn-afn"/>
+                                                            </connections>
+                                                        </button>
+                                                    </subviews>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="trailing" secondItem="Sdj-j1-zKz" secondAttribute="trailing" id="LMD-3C-e8r"/>
+                                                        <constraint firstItem="Sdj-j1-zKz" firstAttribute="top" secondItem="gma-x7-f81" secondAttribute="top" id="cIs-EI-Td1"/>
+                                                        <constraint firstItem="Sdj-j1-zKz" firstAttribute="leading" secondItem="gma-x7-f81" secondAttribute="leading" id="khD-FV-hDw"/>
+                                                        <constraint firstAttribute="bottom" secondItem="Sdj-j1-zKz" secondAttribute="bottom" id="p8u-Xv-9vy"/>
+                                                    </constraints>
                                                 </view>
                                             </subviews>
                                         </stackView>
