--- a/Project Cinema/Base.lproj/Main.storyboard
+++ b/Project Cinema/Base.lproj/Main.storyboard
@@ -265,21 +265,36 @@
             </objects>
             <point key="canvasLocation" x="0.0" y="1445"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Rating Table View Controller-->
         <scene sceneID="Y6f-jN-6xD">
             <objects>
-                <tableViewController id="JWt-1O-Tjc" sceneMemberID="viewController">
+                <tableViewController id="JWt-1O-Tjc" customClass="PCRatingTableViewController" customModule="Project_Cinema" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="BgA-mA-6qw">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="1200"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="6RE-tW-nKB">
-                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ratingPicker" rowHeight="217" id="6RE-tW-nKB">
+                                <rect key="frame" x="0.0" y="92" width="600" height="217"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6RE-tW-nKB" id="gmf-Li-DB4">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="216"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ycf-hN-uec">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="216"/>
+                                            <connections>
+                                                <outlet property="dataSource" destination="JWt-1O-Tjc" id="9c8-rc-lr4"/>
+                                                <outlet property="delegate" destination="JWt-1O-Tjc" id="nPT-gY-fuh"/>
+                                            </connections>
+                                        </pickerView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="Ycf-hN-uec" secondAttribute="bottom" id="1Lb-qU-5wO"/>
+                                        <constraint firstAttribute="trailing" secondItem="Ycf-hN-uec" secondAttribute="trailing" id="QgQ-4Q-PJB"/>
+                                        <constraint firstItem="Ycf-hN-uec" firstAttribute="leading" secondItem="gmf-Li-DB4" secondAttribute="leading" id="hLr-k8-tWj"/>
+                                        <constraint firstItem="Ycf-hN-uec" firstAttribute="top" secondItem="gmf-Li-DB4" secondAttribute="top" id="rFU-Nc-pcu"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
